# snake_who_like_eat

./: .gitignore  CMakeLists.txt  README.md
snake_who_like_eat/: .qmake.stash  commhelper.cpp  commhelper.h  constant.h  food.cpp  food.h  gamecontrol.cpp  gamecontrol.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  mainwindow.cpp  mainwindow.ui  snake.cpp  snake.h  snake_who_like_eat.pro  snake_who_like_eat.qtvscr
snake_who_like_eat/include/: commhelper.h  constant.h  food.h  gamecontrol.h  gamewindow.h  mainwindow.h  snake.h  unit.h
snake_who_like_eat/src/: commhelper.cpp  food.cpp  gamecontrol.cpp  gamewindow.cpp  mainwindow.cpp  snake.cpp  unit.cpp
